--- a/apple_ceos/views/template.html
+++ b/apple_ceos/views/template.html
@@ -4,6 +4,7 @@
     <title>Express Demo | ${title}</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./stylesheets/style.css">
 </head>
 <body>
     <h1 class="container">${title}</h1>
