--- a/exercise/views/partial-index.html
+++ b/exercise/views/partial-index.html
@@ -1,1 +1,15 @@
-<p>You are in Index</p>
+<article class="message is-primary">
+        <div class="message-header">
+          <p>Welcome!</p>
+        </div>
+        <div class="message-body">
+            <div class="content">
+                <p>Hey. Welcome to my web app.</p>
+                <p>The goal of this exercise was to go off on our own and spin up an express web app.</p>
+                <p>We were tasked with creating a postgres database and connecting our web app to whatever data we inserted into our table.</p>
+                <p>I'm an arsenal fan so I went ahead and entered the first team arsenal players into a postgres database and display that data in an HTML Table.</p>
+                <p>I'm using Bulma for styling.</p>
+                <p>Go ahead and click on "Arsenal Players" in the nav bar.</p>
+            </div>
+        </div>
+</article>
