--- a/exercise/views/template.html
+++ b/exercise/views/template.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> ${title} </title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-  </head>
-  <body>
-  <section class="section">
-    <div class="container">
-      <h1 class="title">
-        ${title}
-      </h1>
-      <div class="content">
-          ${partial}
-      </div>
-    </div>
-  </section>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>${title}</title>
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css"
+        />
+        <script
+            defer
+            src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
+        ></script>
+    </head>
+    <body>
+      <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+          <a class="navbar-item" href="https://www.arsenal.com/">
+            <img src="./images/arsenal_logo.png">
+          </a>
+        </div>
+        <a class="navbar-item" href="/">Home</a>
+        <a class="navbar-item" href="/arsenal">Arsenal Players</a>
+      </nav>
+        <section class="section">
+            <div class="container">
+                <h1 class="title">
+                    ${title}
+                </h1>
+                ${partial}
+            </div>
+        </section>
+    </body>
 </html>
